Increased timeout